# docs/api/swagger.yaml
@@ -742,7 +742,15 @@ paths:
           type: integer
         - name: dir
           in: query
-          description: "升序('asc')or降序('desc'), 默认升序"
+          description: "升序('asc')or降序('desc'), 默认降序"
+          type: string
+        - name: type
+          in: query
+          description: 类型筛选
+          type: string
+        - name: city
+          in: query
+          description: 城市
           type: string
         - name: exist
           in: query
@@ -813,6 +821,10 @@ paths:
         - name: contact
           in: formData
           description: 联系方式
+          type: string
+        - name: type
+          in: formData
+          description: 类型
           type: string
       responses:
         '200':
@@ -1658,6 +1670,19 @@ paths:
             type: array
             items:
               type: string
+  /job_types:
+    get:
+      description: 得到所有岗位类型
+      tags:
+        - 其他模块
+      parameters: []
+      responses:
+        200:
+          description: 成功
+          schema:
+            type: array
+            items:
+              type: string
   /feedbacks:
     post:
       description: 发送反馈信息
@@ -2237,6 +2262,12 @@ definitions:
         type: integer
       average_score:
         type: integer
+      type:
+        type: string
+      city:
+        type: string
+      address:
+        type: string
       created_at:
         type: string
         format: date
